--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -6,20 +6,10 @@ on:
       - 'main'
     paths:
       - 'server/**'
-  workflow_dispatch:
-    inputs:
-      test:
-        description: 'Should test server'     
-        required: true
-        default: true
-      publish:
-        description: 'Should publish server image'     
-        required: true
-        default: true
+  workflow-dispatch:
 
 jobs:
   test-server-local:
-    if: github.event.inputs.test == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -36,10 +26,10 @@ jobs:
 
       - name: Install PostgreSQL 🐘
         run: |
-          apt install wget ca-certificates
+          apt-get install wget ca-certificates
           wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
           echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list
-          apt update && apt install -y postgresql-13 postgresql-client-13 postgis postgresql-13-postgis-3 gdal-bin
+          apt update && apt-get install -y postgresql-13 postgresql-client-13 postgis postgresql-13-postgis-3 gdal-bin
           pg_ctlcluster 13 main start
 
       - name: Run initializing script 📜
@@ -49,7 +39,6 @@ jobs:
         run: cd ./server && ./init-local.sh ./config.env test
 
   test-server-docker:
-    if: github.event.inputs.test == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -58,7 +47,7 @@ jobs:
         
       - uses: KengoTODA/actions-setup-docker-compose@v1.0.3
         with:
-          version: 2.2.3
+          version: v2.2.3
 
       - name: Create user config file 🛠
         run: cd server && ./config-generator.sh localhost
@@ -86,12 +75,7 @@ jobs:
 
   publish-server-image:
     runs-on: ubuntu-latest
-#    needs: [test-server-local, test-server-docker]
-#    if: |
-#      always() &&
-#      (needs.test-server-local.result == 'success' || needs.test-server-local.result == 'skipped') &&
-#      (needs.test-server-local.result == 'success' || needs.test-server-local.result == 'skipped') &&
-#      ${{ github.event.inputs.publish }}
+    needs: [test-server-local, test-server-docker]
     permissions:
       contents: read
       packages: write
@@ -101,7 +85,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v1.14.1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -109,12 +93,12 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v3.7.0
         with:
           images: ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v2.10.0
         with:
           context: ./server/
           file: ./server/docker/Dockerfile-alpine
