--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -58,7 +58,9 @@ jobs:
         run: cd server && ./config-generator.sh localhost
         
       - name: Run server in Docker 📥
-        run: cd server && sudo docker-compose -f ./docker/docker-compose.yml --env-file=./docker/.env.development up --build -d
+        run: |
+            sudo docker-compose --version
+            cd server && sudo docker-compose -f ./docker/docker-compose.yml --env-file=./docker/.env.development up --build -d
     
       - name: Install Newman for API testing 🧑‍🚀
         run: npm install newman
