--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -34,7 +34,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install PostgreSQL 🐘
-        run: sudo pg_ctlcluster 14 main start && cat /var/lib/pgsql/9.3/data/pg_hba.conf
+        run: sudo pg_ctlcluster 14 main start && cat /var/lib/pgsql/14/data/pg_hba.conf
 
       - name: Run initializing script 📜
         run: POSTGRES_ADMIN=postgres ./init-local.sh ./config.env
