--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -31,13 +31,16 @@ jobs:
       - name: Install Python 3.10 🐍
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'
+          python-version: 3.10
 
       - name: Start PostgreSQL 🐘
-        run: sudo systemctl start postgresql.service
+        uses: huaxk/postgis-action@v1
+        with:
+          postgresql version: 14
+          postgresql user: root
 
       - name: Run initializing script 📜
-        run: POSTGRES_ADMIN=postgres ./init-local.sh ./config.env
+        run: ./init-local.sh ./config.env
 
       - name: Run server tests 🧪
         run: ./init-local.sh ./config.env test
