--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Python 3.10 🐍
         uses: actions/setup-python@v3
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
       - name: Start PostgreSQL 🐘
         uses: huaxk/postgis-action@v1
