--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -33,8 +33,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Start PostgreSQL 🐘
+        run: sudo systemctl start postgresql.service
+
       - name: Run initializing script 📜
-        run: ./init-local.sh ./config.env
+        run: POSTGRES_ADMIN=postgres ./init-local.sh ./config.env
 
       - name: Run server tests 🧪
         run: ./init-local.sh ./config.env test
