--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -37,9 +37,7 @@ jobs:
         run: sudo systemctl start postgresql.service
 
       - name: Run initializing script 📜
-        run: |
-          pg_isready
-          POSTGRES_ADMIN=postgres ./init-local.sh ./config.env
+        run: sudo find /tmp/ -name .s.PGSQL.5432 && POSTGRES_ADMIN=postgres ./init-local.sh ./config.env
 
       - name: Run server tests 🧪
         run: ./init-local.sh ./config.env test
