--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -35,7 +35,10 @@ jobs:
 
       - name: Start PostgreSQL 🐘
         run: |
-          sudo apt-get update && sudo apt-get -y install postgis	postgresql-14-postgis-3
+          sudo apt -y install gnupg2
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" | sudo tee  /etc/apt/sources.list.d/pgdg.list
+          sudo apt-get update && sudo apt-get -y install postgis postgresql-14-postgis-3
           sudo systemctl start postgresql.service
 
       - name: Run initializing script 📜
