--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -42,7 +42,10 @@ jobs:
           sudo systemctl start postgresql.service
 
       - name: Run initializing script 📜
-        run: POSTGRES_ADMIN=postgres ./init-local.sh ./config.env database && ./init-local.sh ./config.env server
+        run: |
+          POSTGRES_ADMIN=postgres ./init-local.sh ./config.env database
+          sudo systemctl restart postgresql.service
+          ./init-local.sh ./config.env server
 
       - name: Run server tests 🧪
         run: ./init-local.sh ./config.env test
