actions retry FINALLY

--- a/.github/workflows/ml-helper.yml
+++ b/.github/workflows/ml-helper.yml
@@ -6,6 +6,7 @@ on:
       - 'main'
     paths:
       - 'ml-helper/**'
+      - '.github/workflows/ml-helper.yml'
 
 jobs:
   test-hogweed-detector:
