--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -6,6 +6,7 @@ on:
       - 'main'
     paths:
       - 'server/**'
+      - '.github/workflows/server.yml'
 
 defaults:
   run:
@@ -51,7 +52,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3.0.1
 
-      - uses: KengoTODA/actions-setup-docker-compose@v1.0.7
+      - uses: KengoTODA/actions-setup-docker-compose@v1.0.7 🐋
         with:
           version: v2.2.3
 
@@ -67,7 +68,7 @@ jobs:
       - name: Wait for server to start ⏱
         uses: mydea/action-wait-for-api@v1.0.0
         with:
-          url: https://api.example.com/status
+          url: http://localhost:8000/healthcheck
           timeout: 150
           interval: 3
 
@@ -88,20 +89,20 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3.0.1
 
-      - name: Log in to the Container registry
+      - name: Log in to the Container registry 🚪
         uses: docker/login-action@v1.14.1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata (tags, labels) for Docker 🏋️
         id: meta
         uses: docker/metadata-action@v3.7.0
         with:
           images: ghcr.io/${{ github.repository }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image 🏗️
         uses: docker/build-push-action@v2.10.0
         with:
           context: .
