--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -106,8 +106,8 @@ jobs:
       - name: Build and push Docker image 🏗️
         uses: docker/build-push-action@v2.10.0
         with:
-          context: .
-          file: ./docker/Dockerfile-alpine
+          context: ./server
+          file: ./server/docker/Dockerfile-alpine
           build-args: |
             WORKDIR=app
             HOGWEED_PORT=3000
