--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   gallery_saver: ^2.3.1
   images_picker: ^1.2.4
+  fluttertoast: ^8.0.9
 
   flutter_focus_watcher: ^2.0.0
   json_annotation: ^4.4.0
