--- a/server/Pipfile
+++ b/server/Pipfile
@@ -6,11 +6,12 @@ verify_ssl = true
 [packages]
 django = "~=4.0.1"
 pillow = "~=9.0.0"
-psycopg2-binary = "~=2.9.3"
-django-leaflet = "~=0.28.2"
 daphne = "~=3.0.2"
+psycopg2-binary = "~=2.9.3"
 djangorestframework = "~=3.13.1"
+django-leaflet = "~=0.28.2"
 django-cleanup = "~=6.0.0"
+django-cors-headers = "~=3.11.0"
 
 [requires]
 python_version = "3.10"
