--- a/.github/workflows/ml-helper.yml
+++ b/.github/workflows/ml-helper.yml
@@ -15,14 +15,18 @@ jobs:
     steps:
     - name: Checkout 🛎️
       uses: actions/checkout@v3.0.1
-      with:
-        lfs: true
 
     - name: Install Dependencies 🛠
       run: |
         cd ./ml-helper
         pip3 install --user pipenv
         pipenv install --skip-lock --system
+    
+    - name: Fetch Github Release Asset 🦞
+      uses: dsaltares/fetch-gh-release-asset@0.0.8
+      with:
+        file: "hogweed-detector.tflite"
+        target: "./ml-helper/hogweed-detector.tflite"
 
     - name: Test Detector 🧪
-      run: python3 ./ml-helper/test.py -n ./ml-helper/models/hogweed-detector.tflite -s ./ml-helper/datasets/test.csv
+      run: python3 ./ml-helper/test.py -n ./ml-helper/hogweed-detector.tflite -s ./ml-helper/datasets/test.csv
