--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - 'report/**'
       - '.github/workflows/report.yml'
+  workflow_run:
+    workflows: ["CLIENT"]
+    types:
+      - completed
 
 jobs:
   compile-report:
@@ -34,5 +38,4 @@ jobs:
         folder: ./report/build/
         target-folder: ./report/
         clean: false
-        single-commit: True
  
