--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Get Flutter 🐦
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '2.10.4'
+        flutter-version: '2.10.5'
         
     - name: Verify with Doctor ⚕
       working-directory: ./client/
@@ -30,7 +30,7 @@ jobs:
       run: |
         flutter pub get
         flutter pub run build_runner build
-        flutter build web --base-href /HogWeedGo/ --dart-define SERVER=https://localhost:8000/
+        flutter build web --web-renderer html --base-href /HogWeedGo/ --dart-define SERVER=https://localhost:8000/
         
     - name: NoJekyll ❌
       run: touch ./client/build/web/.nojekyll
