--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -13,6 +13,7 @@ on:
       - completed
 
 jobs:
+  if: ${{ github.event.workflow_run.conclusion == 'success' }}
   compile-report:
     runs-on: ubuntu-latest
 
