--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -13,8 +13,8 @@ on:
       - completed
 
 jobs:
-  if: ${{ github.event.workflow_run.conclusion == 'success' }}
   compile-report:
+    if: ${{ github.event.push || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
