report building tweaked

--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   compile-report:
-    if: ${{ github.event.push || github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'push' || github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
