--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -114,3 +114,11 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          
+      - name: Create new release file
+        run: cd ./server && ./docker/generate-server-release.sh
+      
+      - name: Update release
+        uses: johnwbyrd/update-release@v1
+        with:
+            files: ./server/bundled-server.zip
