--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -22,7 +22,8 @@ dependencies:
   url_launcher: ^6.0.12
 
   gallery_saver: ^2.3.1
-  images_picker: ^1.2.4
+  image_picker: ^0.8.5+3
+  cross_file_image: ^0.0.2
   fluttertoast: ^8.0.9
 
   flutter_focus_watcher: ^2.0.0
