--- a/.github/workflows/ml-helper.yml
+++ b/.github/workflows/ml-helper.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Fetch Github Release Asset 🦞
       uses: dsaltares/fetch-gh-release-asset@0.0.8
       with:
+        name: "HogWeed detector release"
         file: "hogweed-detector.tflite"
         target: "./ml-helper/hogweed-detector.tflite"
 
