--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -6,6 +6,7 @@ on:
       - 'main'
     paths:
       - 'report/**'
+      - 'HogWeedGo.openapi.yml'
       - '.github/workflows/report.yml'
   workflow_run:
     workflows: ["CLIENT"]
