api pagination finished

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Build 🛠
       run: |
-        flutter pub upgrade
+        flutter pub get
         flutter pub run build_runner build
         flutter build web --web-renderer html --base-href /HogWeedGo/ --dart-define SERVER=$SERVER
       env:
