--- a/server/docker/nginx.conf.template
+++ b/server/docker/nginx.conf.template
@@ -1,7 +1,7 @@
 server {
     listen *:${NGINX_PORT_HTTP};
     listen *:${NGINX_PORT_HTTPS} default ssl;
-    server_name _;
+    server_name hogweed-server;
     charset utf-8;
 
     client_max_body_size 1024M;
