--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'report/**'
       - 'HogWeedGo.openapi.yml'
+      - 'server/assets/privacy-policy.html'
       - '.github/workflows/report.yml'
 
 defaults:
