--- a/ml-helper/Pipfile
+++ b/ml-helper/Pipfile
@@ -15,6 +15,7 @@ tensorflow = "~=2.7.0"
 Pillow = "~=9.0.0"
 ipython = "~=8.0.0"
 imagehash = "~=4.2.1"
+sklearn = "~=1.1.1"
 
 [requires]
 python_version = "3.9"
