--- a/server/Pipfile
+++ b/server/Pipfile
@@ -12,6 +12,7 @@ djangorestframework = "~=3.13.1"
 django-leaflet = "~=0.28.2"
 django-cleanup = "~=6.0.0"
 django-cors-headers = "~=3.11.0"
+django-dbbackup = "~=4.0.2"
 
 [requires]
 python_version = "3.10"
